# storefront

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker.env  pyproject.toml  requirements.txt
core/: admin.py  serializers.py  urls.py
core/migrations/: 0001_initial.py
core/signals/: handlers.py
core/templates/core/: index.html
likes/: models.py
likes/migrations/: 0001_initial.py
locustfiles/: browse_products.py
playground/: tasks.py  urls.py  views.py
playground/templates/: hello.html
store/: admin.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  validators.py  views.py
store/migrations/: 0001_initial.py  0002_alter_customer_options_remove_customer_email_and_more.py  0002_rename_price_to_unit_price.py  0003_add_slug_to_product.py  0003_alter_order_options.py  0004_address_state_address_zip.py  0004_alter_customer_options_alter_cartitem_quantity.py  0005_alter_collection_options_alter_customer_options_and_more.py  0005_alter_order_options_alter_orderitem_order_and_more.py  0006_alter_product_description_alter_product_inventory_and_more.py  0006_productimage.py  0007_alter_productimage_image.py  0007_remove_collection_store_colle_title_ddb562_idx_and_more.py  0008_review.py
store/signals/: __init__.py  handlers.py
store/tests/: conftest.py  test_cart_items.py  test_carts.py  test_collections.py  test_customers.py  test_orders.py  test_products.py  test_reviews.py
store_custom/: admin.py
storefront/: settings.py  urls.py
tags/: admin.py  models.py
tags/migrations/: 0001_initial.py
(+1 files in other folders)
